# adventofcode

./: .clang-format  .gitignore  .travis.yml  Makefile  README.md  aoc2020_blog.md  intcode.sh  one_lang_per_day.md
.github/workflows/: cmake.yml  erlang.yml  maven.yml
2015/: .project  aoc2015.escript
2015/01/: puzzle01.erl
2015/02/: puzzle02.erl
2015/03/: puzzle03.erl
2015/04/: puzzle04.erl
2015/05/: puzzle05.erl
2015/06/: puzzle06.erl  puzzle06b.erl
2015/07/: puzzle07.erl
2015/08/: puzzle08.erl
2015/09/: puzzle9.erl
2015/10/: puzzle10.erl
2015/11/: puzzle11.erl
2015/12/: puzzle12.erl
2015/13/: puzzle13.erl
2015/14/: puzzle14.erl
2015/15/: puzzle15.erl
2015/16/: puzzle16.erl
2015/17/: puzzle17.erl
2015/18/: puzzle18.erl
2015/19/: input.hrl  puzzle19.erl
2015/20/: README.md  puzzle20.erl  puzzle20_part2.erl
2015/21/: puzzle21.erl
2015/22/: .project  puzzle22.erl  puzzle22_alt.erl
2015/23/: puzzle23.erl
2015/24/: puzzle24.erl  puzzle24.pl
2015/25/: puzzle25.erl
2016/: aoc2016.escript
2016/01/: puzzle01.erl
2016/02/: puzzle02.erl
2016/03/: puzzle03.erl
2016/04/: puzzle04.erl
2018/: Makefile  aoc2018.escript
aoc-java/: .classpath  build.xml  newpuzzle.sh
aoc_c/: .cproject  .project  CMakeLists.txt  Makefile  aoc2015_day06.c  aoc2016.c  aoc2016.h  aoc2016_day14.c  aoc2018_day21.c  configure
aoc_c/src/: aoc2015_day06.c  aoc2016_day14.c  aoc2018_day01.c  aoc2018_day21.c  aoc2019_day04.c  aoc2019_day09.c  aoc2020_day09.cpp  intcode.c  intcode.h  md5.c
aoc_cpp/: aoc2015_day20.cpp
aoc_erlang/: LICENSE  Makefile  README.md  erlang_ls.config  erlang_ls.yaml  intcode-adventure.sh  migrate.sh  plot.txt  rebar.config  rotate_and_flips.txt  table.csv  table.html
aoc_java/: .classpath  .project  2018-15-Day15.trace  2018-15-Day15b.trace  pom.xml  results-java-2020.json  results-java.json  table.csv
aoc_py/: puzzle24.py
aoc_python/: day01.py
aoc_rust/: Cargo.toml
olpd_2019/: .gitignore  Makefile  intcode.sh  one_lang_per_day.md  run_all.sh
(+751 files in other folders)
